<?xml version="1.0"?>
<package>
  <name>ros_deep_learning</name>
  <version>0.0.0</version>
  <description>Deep-learning nodes for ROS with support for NVIDIA Jetson and TensorRT, based on the jetson-inference library</description>
  <maintainer email="dustinf@nvidia.com">Dustin Franklin</maintainer>
  <license>Open</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nodelet</run_depend>

  <export>
      <nodelet plugin="${prefix}/ros_deep_learning_nodelets.xml"/>
  </export>

</package>
